infra/k8s/hotel-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-service
  template:
    metadata:
      labels:
        app: hotel-service
    spec:
      containers:
        - name: hotel-service
          image: eneoxkeskin/hotel-service
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
spec:
  selector:
    app: hotel-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
