infra/k8s/reservation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - name: reservation-service
          image: eneoxkeskin/reservation-service
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
