infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: microservices.dev
    http:
      paths:
        - path: /api/users(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 5000
        - path: /api/hotels(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: hotel-service
              port:
                number: 5001
        - path: /api/reservations(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: reservation-service
              port:
                number: 5002
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: client-srv
              port:
                number: 5173
